[gd_scene load_steps=19 format=2]

[ext_resource path="res://Main Buttons.tscn" type="PackedScene" id=1]
[ext_resource path="res://Skins.gd" type="Script" id=2]
[ext_resource path="res://TextureButton.gd" type="Script" id=3]
[ext_resource path="res://assets/Skin 9.png" type="Texture" id=4]
[ext_resource path="res://assets/Skin 15.png" type="Texture" id=5]
[ext_resource path="res://assets/Skin 10.png" type="Texture" id=6]
[ext_resource path="res://assets/Skin 1.png" type="Texture" id=7]
[ext_resource path="res://assets/Skin 8.png" type="Texture" id=8]
[ext_resource path="res://assets/Skin 4.png" type="Texture" id=9]
[ext_resource path="res://assets/Skin 13.png" type="Texture" id=10]
[ext_resource path="res://assets/Skin 14.png" type="Texture" id=11]
[ext_resource path="res://assets/Skin 12.png" type="Texture" id=12]
[ext_resource path="res://assets/Skin 7.png" type="Texture" id=13]
[ext_resource path="res://assets/Skin 5.png" type="Texture" id=14]
[ext_resource path="res://assets/Skin 2.png" type="Texture" id=15]
[ext_resource path="res://assets/Skin 11.png" type="Texture" id=16]
[ext_resource path="res://assets/Skin 6.png" type="Texture" id=17]
[ext_resource path="res://assets/Skin 3.png" type="Texture" id=18]

[node name="Skins" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 516.0
margin_bottom = 720.0
color = Color( 0.541176, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 516.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 516.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 516.0
margin_bottom = 720.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 516.0
margin_bottom = 332.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 516.0
margin_bottom = 332.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 516.0
margin_bottom = 87.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 87.0
texture_normal = ExtResource( 7 )
script = ExtResource( 3 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 87.0
texture_normal = ExtResource( 15 )

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 87.0
texture_normal = ExtResource( 18 )

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 87.0
texture_normal = ExtResource( 9 )

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 87.0
texture_normal = ExtResource( 14 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 516.0
margin_bottom = 178.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 87.0
texture_normal = ExtResource( 17 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 87.0
texture_normal = ExtResource( 13 )

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 87.0
texture_normal = ExtResource( 8 )

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 87.0
texture_normal = ExtResource( 4 )

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 87.0
texture_normal = ExtResource( 6 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 516.0
margin_bottom = 269.0

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 100.0
margin_bottom = 87.0
texture_normal = ExtResource( 16 )

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 87.0
texture_normal = ExtResource( 12 )

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 87.0
texture_normal = ExtResource( 10 )

[node name="TextureButton4" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 87.0
texture_normal = ExtResource( 11 )

[node name="TextureButton5" type="TextureButton" parent="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 87.0
texture_normal = ExtResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 336.0
margin_right = 516.0
margin_bottom = 668.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 75.0
margin_right = 516.0
margin_bottom = 89.0
size_flags_vertical = 6
text = "Skin:"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 168.0
margin_right = 516.0
margin_bottom = 332.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer/VBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 258.0
margin_top = 82.0
margin_right = 258.0
margin_bottom = 82.0
size_flags_vertical = 3

[node name="Main Buttons" parent="VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 672.0
margin_bottom = 719.0
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton3" to="." method="_on_TextureButton3_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton4" to="." method="_on_TextureButton4_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2/TextureButton5" to="." method="_on_TextureButton5_pressed"]
